--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "ethers": "^5.7.1",
+    "glip-wallet-sdk": "^1.0.110",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
